dnl
dnl
dnl			     configure.in
dnl
dnl	      Copyright (C) 1997  Internet Message Group
dnl
dnl		       This M4 library conforms
dnl		GNU GENERAL PUBLIC LICENSE Version 2.
dnl
dnl
dnl Author:  Internet Message Group <img@mew.org>
dnl Created: Apr 23, 1997
dnl Revised: Apr 08, 1998
dnl

AC_INIT(imget.in)

dnl Checks for programs.
AC_PROG_INSTALL()
AC_CANONICAL_HOST

im_version="version 980506"
im_revised="May 06, 1998"
im_file_attr="O_RDWR|O_CREAT|O_EXCL"

AC_SUBST(im_version)
AC_SUBST(im_revised)
AC_SUBST(im_rpop)
AC_SUBST(im_db_type)
AC_SUBST(im_file_attr)
IM_PATH_PERLV_PROGS(im_path_perl, perl perl5, PERL5_NOT_FOUND)
case "$im_path_perl" in
""|PERL5_NOT_FOUND)
   echo "fatal error: perl 5.004 not found. install perl 5.004 or later." 1>&2
   exit 1
esac
IM_PATH_SITEPERL(im_path_siteperl, "$im_path_perl", missing_siteperl)
AC_PATH_PROGS(im_path_chmod, chmod, missing_chmod)
AC_PATH_PROGS(im_path_cp, cp, missing_cp)
AC_PATH_PROGS(im_path_mkdir, mkdir, missing_mkdir)
AC_PATH_PROGS(im_path_rm, rm, missing_rm)
IM_DB_TYPE(im_db_type, $im_path_perl)

dnl Checks for libraries.

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_ARG_ENABLE(rpop,
[  --enable-rpop           Use RPOP (suidperl is needed)],
[im_rpop="-o root -m 4555"],
[im_rpop="-m 555"],)

AC_OUTPUT(imali:imali.in imcat:imcat.in imcd:imcd.in imclean:imclean.in \
	imget:imget.in imgrep:imgrep.in imhist:imhist.in \
	imjoin:imjoin.in imls:imls.in immv:immv.in \
	impack:impack.in impath:impath.in imput:imput.in \
	impwagent:impwagent.in \
	imrm:imrm.in imsetup:imsetup.in imsort:imsort.in \
	imstore:imstore.in imtar:imtar.in\
	Makefile:Makefile.in \
	IM/Address.pm:IM.in/Address.pm.in \
	IM/Alias.pm:IM.in/Alias.pm.in \
	IM/Config.pm:IM.in/Config.pm.in \
	IM/EncDec.pm:IM.in/EncDec.pm.in \
	IM/File.pm:IM.in/File.pm.in \
	IM/Folder.pm:IM.in/Folder.pm.in \
	IM/GetPass.pm:IM.in/GetPass.pm.in \
	IM/Grep.pm:IM.in/Grep.pm.in \
	IM/Header.pm:IM.in/Header.pm.in \
	IM/History.pm:IM.in/History.pm.in \
	IM/Http.pm:IM.in/Http.pm.in \
	IM/Imap.pm:IM.in/Imap.pm.in \
	IM/Iso2022jp.pm:IM.in/Iso2022jp.pm.in \
	IM/Japanese.pm:IM.in/Japanese.pm.in \
	IM/LocalMbox.pm:IM.in/LocalMbox.pm.in \
	IM/Log.pm:IM.in/Log.pm.in \
	IM/MD5.pm:IM.in/MD5.pm.in \
	IM/Message.pm:IM.in/Message.pm.in \
	IM/MsgStore.pm:IM.in/MsgStore.pm.in \
	IM/Nntp.pm:IM.in/Nntp.pm.in \
	IM/Pop.pm:IM.in/Pop.pm.in \
	IM/Recipient.pm:IM.in/Recipient.pm.in \
	IM/Scan.pm:IM.in/Scan.pm.in \
	IM/Smtp.pm:IM.in/Smtp.pm.in \
	IM/TcpTransaction.pm:IM.in/TcpTransaction.pm.in \
	IM/Util.pm:IM.in/Util.pm.in \
	, chmod 555 imali imcat imcd imclean imget imgrep imhist imjoin\
	imls immv impack impath imput impwagent imrm imsetup imsort imstore\
	imtar)
